--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,10 @@ body {
     width: 80px; /* Diminui o tamanho das imagens */
     height: auto;
   }
+
+  footer p{
+    font-size: 12px;
+  }
 }
 
 
